src/test/deca/codegen/invalid/resultats/stackoverflow_obj_decl2-ima.res
ok
Erreur : La pile est pleine.
